--- a/12-portfolio/portfolio.html
+++ b/12-portfolio/portfolio.html
@@ -22,31 +22,39 @@
         </ul>
       </div>
     </header>
-    <main class="mx-auto max-w-screen-lg bg-yellow-400 min-h-20">
+    <main class="mx-auto max-w-screen-lg min-h-20 px-3 py-6">
       <!-- hero -->
       <section class="flex gap-x-3">
         <!-- titulo e descrição -->
-        <div>
-          <h1>Oi, meu nome é Michael</h1>
-          <p>
+        <div class="w-2/3">
+          <h1 class="text-3xl">Oi, meu nome é Michael</h1>
+          <p class="text-xl leading-8 mt-6 mb-2">
             Falando um pouco sobre mim, sou desenvolvedor web que agora criar
-            coisas novas e aprender novas tecnologias. Especializado em PHP e
-            HTML.
+            coisas novas e aprender novas tecnologias. Especializado em PHP,
+            HTML e CSS. 
           </p>
           <p>
-            <!-- links de redes sociais -->
-            <!--  -->
+            <ul class="flex gap-x-3 mt-3">
+              <li><a href="">GitHub</a></li>
+              <li><a href="">LinkedIn</a></li>
+              <li><a href="">Instagram</a></li>
+              <li><a href="">Facebook</a></li>
+            </ul>
           </p>
-          <div>
-            <!-- imagem -->
-          </div>
         </div>
-        <div>foto</div>
+        <!-- imagem -->
+        <div class="w-1/3  flex items-center justify-center">
+          <div>foto</div>
+        </div>
       </section>
       <!-- projetos -->
-      <section>
+      <section class=" space-y-3 py-6">
+        <h2 class="text-2xl font-bold">Meus Projetos</h2>
         <!-- projeto -->
-        <div></div>
+        <div class="bg-slate-800 rounded-lg p-3 flex items-center">
+          <div class="w-1/5">foto projeto</div>
+          <div class="w-4/5">conteudo</div>
+        </div>
       </section>
     </main>
   </body>
